--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,7 +32,7 @@
     "submenu": []
   },
   {
-    "path": "/admin/zone",
+    "path": "/admin/location/zone",
     "title": "Zone",
     "iconType": "",
     "icon": "",
@@ -44,7 +44,7 @@
     "submenu": []
   },
   {
-    "path": "/admin/region",
+    "path": "/admin/location/region",
     "title": "Region",
     "iconType": "",
     "icon": "",
@@ -56,7 +56,7 @@
     "submenu": []
   },
   {
-    "path": "/admin/state",
+    "path": "/admin/location/state",
     "title": "State",
     "iconType": "",
     "icon": "",
@@ -68,7 +68,7 @@
     "submenu": []
   },
   {
-    "path": "/admin/city",
+    "path": "/admin/location/city",
     "title": "City",
     "iconType": "",
     "icon": "",
@@ -80,7 +80,7 @@
     "submenu": []
   },
   {
-    "path": "/admin/postalcode",
+    "path": "/admin/location/postalcode",
     "title": "Postal Code",
     "iconType": "",
     "icon": "",
@@ -92,7 +92,7 @@
     "submenu": []
   },
   {
-    "path": "/admin/locality",
+    "path": "/admin/location/locality",
     "title": "Locality",
     "iconType": "",
     "icon": "",
